--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,118 +3,14 @@
   <app-header (sideNavToggled)="sideNavStatus = $event;"></app-header>
 
   <main>
-    <app-side-nav [sideNavStatus]="sideNavStatus"
+    <app-side-nav class="side" [sideNavStatus]="sideNavStatus"
       [ngClass]="{'app-side-nav-open': sideNavStatus}"></app-side-nav>
 
     <div class="display-area p-3"
       [ngClass]="{'display-area-shrink': sideNavStatus}">
       <section>
         <div class="d-flex justify-content-center align-items-center h-100">
-          <h4>Aqui va el Carrousel</h4>
-        </div>
-      </section>
-      <section>
-        <div class="d-flex justify-content-center align-items-center h-100">
-          <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-            <!-- Indicadores de carrusel -->
-            <ol class="carousel-indicators">
-              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-              <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
-              <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
-            </ol>
-
-            <!-- Contenido del carrusel -->
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img
-                  src="https://logolook.net/wp-content/uploads/2021/07/Symbol-Harry-Potter.png"
-                  alt="Imagen 1" style="width: 600px; height: 400px;">
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="https://www.elsoldeleon.com.mx/incoming/nkx535-utl-2.jpeg/ALTERNATES/LANDSCAPE_1140/utl%20(2).jpeg"
-                  alt="Imagen 2" style="width: 600px; height: 400px;">
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="https://th.bing.com/th/id/R.a67a32e4a847e4c0fbd124d70314fcad?rik=EW34e63kIRqgcA&pid=ImgRaw&r=0"
-                  alt="Imagen 3" style="width: 600px; height: 400px;">
-              </div>
-            </div>
-
-            <!-- Controles de carrusel -->
-            <a class="carousel-control-prev" href="#myCarousel" role="button"
-              data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Anterior</span>
-            </a>
-            <a class="carousel-control-next" href="#myCarousel" role="button"
-              data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Siguiente</span>
-            </a>
-          </div>
-        </div>
-      </section>
-      <br>
-      <section>
-        <div class="d-flex justify-content-center align-items-center h-100">
-          <h4>Aqui van las cards</h4>
-        </div>
-      </section>
-      <section>
-        <div class="d-flex justify-content-center align-items-center h-100">
-          <div class="row">
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the
-                  card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the
-                  card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the
-                  card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <br>
-      <section>
-        <div class="d-flex justify-content-center align-items-center h-100">
-          <div class="row">
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the
-                  card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the
-                  card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the
-                  card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
+          <router-outlet></router-outlet>
         </div>
       </section>
     </div>
