--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,13 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark px-2">
+<nav class="navbar navbar-expand navbar-dark px-2">
 
     <div class="side-nav-button p-2 me-3 text-light" (click)="SideNavToggle()">
         <i class="fa-solid fa-bars"></i>
     </div>
 
-    <a class="navbar-brand px-4" href="#">UTL</a>
+    <a class="navbar-brand px-4" href="#">
+        <img src="assets/logo2.png" alt="Logo UTL" style="max-height: 40px;">
+        UTL
+    </a>
 
     <div class="navbar-collapse">
         <ul class="navbar-nav me-auto">
@@ -30,7 +33,7 @@
                 </a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#">
+                <a class="nav-link" routerLink="EgresadosComponent">
                     Egresado
                 </a>
             </li>
@@ -40,7 +43,7 @@
                 </a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#">
+                <a class="nav-link" routerLink="AdministrativoComponent">
                     Administrativo
                 </a>
             </li>
